Fix another use of deprecated API